@@ -24,3 +24,27 @@ inConfig(Test)(Seq(
   parallelExecution := false,
   test := (test dependsOn docker).value,
 ))
+
+val opts = Seq(
+  "-J-server",
+  "-J-Xms128M",
+  "-J-Xmx4G",
+  "-XX:+ExitOnOutOfMemoryError",
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=java.xml.bind",
+  "-XX:+UseG1GC",
+  "-XX:+UseNUMA",
+  "-XX:+AlwaysPreTouch",
+  "-XX:+PerfDisableSharedMem",
+  "-XX:+ParallelRefProcEnabled",
+  "-XX:+UseStringDeduplication",
+  "-XX:MaxMetaspaceSize=512m")
+
+javaOptions in run ++= opts
+
+javaOptions in run ++= Seq(
+  "-XX:+IgnoreUnrecognizedVMOptions",
+  "--add-modules=java.xml.bind"
+)
+
+scalacOptions ++= Seq("-J-Xss8m")
